index.scss
@import url('https://fonts.googleapis.com/css?family=Hind:700|Open+Sans:400,400i');
$color-yellow: #ffd456;
$color-navy: #1c3151;
$color-blue: #25416d;
$color-darkyellow: #e2b42d;
$color-red: #e03c3c;
$color-darkred: #cc2c2c;
$color-translucent: rgba(255, 255, 255, 0.3);

* {
    font-family: 'Open Sans', sans-serif;
}

.block {
    display: block !important;
}

.inline {
    display: inline-block;
}

.default-container {
    color: #f2f2f2;
    margin: 180px 5%;
    min-height: 46vh;
}

.fancy-type {
    font-family: 'Hind', sans-serif;
    text-transform: uppercase;
}

.text-shadow {
    text-shadow: 0px 0px 30px rgba(0,0,0,0.5)
}

.yellow {
    color: $color-yellow !important;
    font-family: 'Hind', sans-serif;
    text-transform: uppercase;
}

.fullscreen-bg {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    overflow: hidden;
    z-index: -100;
}

#footer {
    text-align: center;
    color: white;
    vertical-align: bottom !important;
    position: relative;
}

.fullscreen-bg__video {
    position: absolute;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
}

.cart-quantity{
    display:inline-block;
}
.cart-item{
    width: 100px;
    height: 100px;
}

@media (min-aspect-ratio: 16/9) {
  .fullscreen-bg__video {
    height: 300%;
    top: -100%;
  }
}

@media (max-aspect-ratio: 16/9) {
  .fullscreen-bg__video {
    width: 300%;
    left: -100%;
  }
}

img {
    width: 100%
}

/* Landing */

.landing-img {
    margin-top: 100px;
}

#landing-shop {
    margin-top: 50px;
    background-color: rgba(255, 255, 255, 0.4);
    text-align: center;
    width: 100%;
    height: 50px;
    padding-top: 6%;
    border-radius: 10px;
    color: white;
    font-family: 'Hind', sans-serif;
    text-transform: uppercase;
    box-shadow: 3px 3px 50px rgba(0,0,0, 0.3);
    text-decoration: none;
}
#landing-shop:hover {
    text-decoration: none;
    background-color: rgba(255, 255, 255, 0.5);
    color: $color-yellow;
    box-shadow: 3px 3px 50px rgba(0,0,0, 0.6);
}


/* NavBar */

#nav {
    color: white;
    background-color: $color-navy;
    border: 0px white;
    height: 100px;
    width: 101%;
    margin-bottom: 50px;
    margin-top: -5px;
    padding-top: 0px;
    border-bottom: white 1px;
    padding-right: 20px;
    box-shadow: 3px 3px 50px rgba(0,0,0, 0.3);
    position: fixed;
    z-index: 1;
}

#nav a {
    font-family: 'Hind', sans-serif;
    text-transform: uppercase;
    color: white;
    margin-top: 25px;
    font-size: 1.3em;
}

.drop-region {
    font-family: 'Hind', sans-serif;
    text-transform: uppercase;
    color: white;
    margin-top: 25px;
    font-size: .9em !important;
    margin-left: 10px;
}

.drop-region:hover {
    width: 100%;
}

#nav-region {
    border-radius: 5px;
}
#nav-region:focus {
    background-color: rgba(255, 255, 255, 0.2);
}

#nav-dropdown {
    background-color: $color-navy;
    border-radius: 10px;
}

#nav-dropdown a:hover{
    width: 100%;
    background-color: rgba(255, 255, 255, 0.2);
    color: $color-yellow;
    text-decoration: none;
}
#nav-account {
    color: $color-yellow;
    border-radius: 5px;
}
#nav-account:focus {
    background-color: rgba(255, 255, 255, 0.2);
}
#account-dropdown {
    background-color: $color-navy;
    border-radius: 10px;
}

#account-dropdown a:hover{
    width: 100%;
    background-color: rgba(255, 255, 255, 0.2);
    color: $color-yellow;
    text-decoration: none;
}

#nav-logout {
    margin-left : 5px;
    font-size: .8em;
    color: $color-red;
}

#search {
    margin-top: 33px;
}

#search-input {
    background: rgba(255, 255, 255, 0.2);
    color: white;
}

#search-btn {
    background: rgba(255, 255, 255, 0.6);
    margin-left: 5px;
    border-color: white;
    color: white;
    text-transform: uppercase;
    font-family: 'Hind', sans-serif;
}

#search-btn:hover {
    color: $color-yellow;
    box-shadow: inset 0px 0px 30px rgba(0,0,0,0.2);
}


#nav-logo {
    background: $color-navy;
    position: fixed;
    top: 0;
    left: 43%;
    width: 160px;
    height: 160px;
    border-radius: 100%;
    border: 1px white;
    z-index: 2;
}

#nav-logo img {
    z-index: 100 !important;
    margin-top: 16px;
}

/* All products */

#products-title {
    text-align: center;
    font-size: 3em;
    margin-bottom: 15px;
}

#product-tile a {
    margin-top: 15px;
    background: rgba(255, 255, 255, 0.3);
    border: 0px;
    text-decoration: none;
    box-shadow: 3px 3px 50px rgba(0,0,0, 0.3);
    min-height: 510px;
}

#product-tile a:hover {
    background: rgba(255, 255, 255, 0.3);
    border: 0px;
    color: $color-yellow;
    font-family: 'Amaranth', sans-serif;
    box-shadow: 3px 3px 50px rgba(0,0,0, 0.7);
}

#product-tile a p {
    color: white;
}

#product-tile-title {
    font-size: 1.5em;
    text-align: center;
    font-family: 'Hind', sans-serif;
    text-transform: uppercase;
    margin-bottom: 0px;
    margin-top: 10px;
}

#product-tile-subtitle {
    font-size: 1.5em;
    text-align: center;
    font-family: 'Hind', sans-serif;
    text-transform: uppercase;
    margin-bottom: 0px;
    margin-top: 0px;
}


#product-tile-price {
    text-align: center;
    font-size: 1.2em;
}


/* Single Product && Reviews */

.login-review-link {
    color: $color-yellow;
    font-family: 'Hind', sans-serif;
    text-transform: uppercase;
    text-decoration: underline;
}

.login-review-link:hover {
    color: $color-darkyellow;
}

#leave-review-disabled {
    background-color: rgba(37, 65, 109, 0.5);
    margin-bottom: 15px;
    border: none;
    text-transform: uppercase;
}
#leave-review {
    background-color: $color-blue;
    border: none;
    text-transform: uppercase;
}

#leave-review:hover {
    color: $color-yellow;
    box-shadow: 3px 3px 50px rgba(0,0,0, 0.3);
    background-color: $color-navy;
}

#review-submit-disabled {
    margin-top: 15px;
    text-transform: uppercase;
    background-color: rgba(255, 212, 86, 0.3);
}

#review-submit {
    border: none;
    background-color: $color-darkyellow;
    margin-top: 15px;
    text-transform: uppercase;
    border: none;
}

#review-submit:hover {
    box-shadow: 3px 3px 50px rgba(0,0,0, 0.3);
}

.review-content {
    background-color: $color-translucent;
    border-radius: 3px;
}

.review-tile {
    margin: 0px 16px 30px 16px;
}

.review-panel {
    background-color: $color-translucent;
    margin-top: 50px;
    box-shadow: 3px 3px 50px rgba(0,0,0, 0.2);
}

.review-inner-panel {
    background-color: rgba(0,0,0, 0.0)
}

#product-title {
    margin: 30px 0px -15px 0px;
}

.region {
    margin-bottom: 25px;
    margin-top: 15px;
}

#field-notes {
    font-family: 'Hind', sans-serif;
    text-transform: uppercase;
}

.description {
    line-height: 1.5;

}

.caption {
    margin-left: 30px;
}

.price {
    margin-top: 30px;
    margin-bottom: 25px;
    font-size: 1.5em;
}

#product-add {
    background-color: $color-darkyellow;
    box-shadow: 3px 3px 50px rgba(0,0,0, 0.3);
    min-height: 40px;
    min-width: 40px;
}

#product-add:hover {
    box-shadow: inset 0px 0px 20px rgba(0,0,0, 0.3);
}

#product-delete {
    margin-left: 5px;
    background-color: #D9534F;
    box-shadow: 3px 3px 50px rgba(0,0,0, 0.3);
    min-height: 40px;
    min-width: 40px;
}

#product-delete:hover {
    box-shadow: inset 0px 0px 20px rgba(0,0,0, 0.3);
}

#single-product-img {
    border-radius: 5px;
}

/* Home */

#home-arrow {
   font-size: .8em;
   margin-left: 5px;
}

#home-page img{
    width: 108%;
    margin-left: -5%;
    position: fixed;
    margin-top: 0%;
    z-index: 0;
}

.home-container {
    position: fixed;
    z-index: 2;
    margin-left: 13%;
}

.shader {
    background-color: black;
    position: fixed;
    z-index: 1;
    width: 100%;
}

#home-title {
    font-family: 'Hind', sans-serif;
    text-transform: uppercase;
    font-size: 7em;
    margin-top: 100px;
    margin-bottom: 0px;
}

#home-subtitle {
    margin-top: 0px;
    text-transform: uppercase;
    font-size: 5em;
    margin-bottom: 30px;
}

.home-container h5 {
    width: 150px;
    background-color: $color-darkyellow;
    border-radius: 5px;
    height: 50px;
    padding-top: 3.5%;
    text-align: center;
    font-size: 1.3em;
    font-family: 'Hind', sans-serif;
    text-transform: uppercase;
}

/* LOGIN */

.signup-names {
    display: inline-block;
    width: 49%;
}

.signup {
    text-align: right;
}


.form-title {
    margin-bottom: 0px;
}

.form-subtitle {
    margin-top: 0px;
    text-transform: uppercase;
    font-size: 2.2em;
    color: $color-yellow;
}

.login-btn {
    margin-top: 15px;
    background-color: $color-yellow;
    border: none;
    border-radius: 3px !important;
    text-transform: uppercase;
}

.google-btn {
    margin-top: 15px;
    background-color: $color-red;
    border: none;
    color: white;
    border-radius: 3px !important;
    text-transform: uppercase;
}

.google-btn:hover {
    background-color: $color-darkred;
    color: white;
}

.login-btn:hover {
    background-color: $color-darkyellow;
    color: white;
}

.line {
    border-right: 1px white;
}

.login-container {
    color: #f2f2f2;
    margin: 180px 10%;
}

#last-name {
    margin-left: 2%;
}

.form-spacing {
    margin-top: 15px;
}

.ratingStar {
    color: $color-yellow
}


/* CART */

#cart-quantity {
    width: 30px;
    min-height: 32px;
}

#cart-total {
    color: $color-yellow;
    font-family: 'Hind', sans-serif;
    text-transform: uppercase;
}

.cart-footer {
    text-align: right;

}

#cart-quantity-adjuster {
    text-align: center;
    margin-bottom: 10px;
}

.your-cart {
    text-align: center;
}

.checkout-btn {
    margin-top: 10px;
    width: 175px;
    text-transform: uppercase;
    font-size: 1.2em;
}


/* USER ACCOUNT */

.account-details {
    background-color: $color-translucent;
    color: white;
    box-shadow: 3px 3px 50px rgba(0,0,0, 0.2);
}

.account-btns {
    margin-top: 10px;
    border-radius: 0px;
    border: none;
    background-color: $color-yellow;
    color: white;
}

.account-btns:hover {

    border: none;
    background-color: $color-darkyellow;
    color: white;
}

/* ADMIN */

.col-md-4 {
  font-size: 11px
}

